fix: for view without distortions setting constant height for marker view

--- a/src/app/modules/map/components/marker/marker.component.scss
+++ b/src/app/modules/map/components/marker/marker.component.scss
@@ -6,6 +6,8 @@ $inner-space: 5px;
   //border-right: none;
   //border-left: none;
 
+  height: 80px;
+
   &_body {
     display: grid;
     grid-template-columns: 50px 1fr 25px;
